# xiayan-mcp

./: .env  .env.example  .mcp.json  IMPROVEMENT_GUIDE.md  IMPROVEMENT_SUMMARY.md  PUBLISHING_FIX_SUMMARY.md  README.md  WEB应用启动指南.md  analyze_encoding.py  book_review.md  credentials_manager.py  debug_conversion.py  debug_detailed.py  debug_output.html  diagnose.py  fixed_draft_content.html  fixed_draft_preview.html  fixed_run.py  latest_draft_preview.html  mcp_server.py  media_upload_guide.md  project_structure.txt  pyproject.toml  requirements.txt  run.py  simple_diagnose.py  simple_test.md  test_theme.py  wechat_content_fix.py  xiayan-mcp 启动指南.md
.codebuddy/: settings.local.json
.trae/documents/: xiayan-mcp Web可视化界面开发计划.md  xiayan-mcp Web应用测试计划.md  优化xiayan-mcp前端应用.md  添加xiayan-mcp服务启动中文输出.md
src/xiayan_mcp/: __init__.py  server.py
src/xiayan_mcp/core/: __init__.py  formatter.py  formatter.py.backup  publisher.py
src/xiayan_mcp/publish/: __init__.py
src/xiayan_mcp/themes/: __init__.py  theme.py  theme_manager.py
src/xiayan_mcp/utils/: encoding.py
tests/: __init__.py  test_basic_format.md  test_chinese_format.md  test_direct_publish.py  test_encoding.py  test_encoding_utils.py  test_env_load.py  test_fix_encoding.py  test_improved_fix_encoding.py  test_improved_publish.py  test_media_upload.py  test_pure_text.md  test_server.py  test_simple.md  test_text.txt  test_wechat_api.py
web_backend/: main.py  requirements.txt  test_api.py  test_fastapi.py  test_list_themes.py  test_simple.py  test_theme_api.py  test_theme_manager.py  test_xiayan_mcp.py
web_backend/api/: article.py  credential.py  media.py  theme.py
web_backend/core/: xiayan_mcp.py
web_backend/static/: index.html
web_frontend/: index.html  package-lock.json  package.json  vite.config.js
web_frontend/src/: App.vue  main.js
(+36 files in other folders)
